Build 2.0.1466 - Fixed #15633,#15623,#15613,#15612,#15610,#15584  discussion #396415, #396668, Added Swedish and Chinese Simplified localizations
git-svn-id: https://avalondock.svn.codeplex.com/svn/Version2.0@95981 4ef1bfeb-0a34-4d02-9305-240e5b07a168

--- a/AvalonDock/AvalonDock.MVVMTestApp/MainWindow.xaml
+++ b/AvalonDock/AvalonDock.MVVMTestApp/MainWindow.xaml
@@ -57,6 +57,7 @@
                             <StackPanel Orientation="Vertical">
                                 <TextBlock Text="{Binding FileSize}"/>
                                 <TextBlock Text="{Binding LastModified}"/>
+                                <TextBox Text="test"/>
                             </StackPanel>
                         </DataTemplate>
                     </local:PanesTemplateSelector.FileStatsViewTemplate>
