Build 2.0.1507 - Fixed #15640, Improved Support for WinForms integration thru ElementHost
git-svn-id: https://avalondock.svn.codeplex.com/svn/Version2.0@96121 4ef1bfeb-0a34-4d02-9305-240e5b07a168

--- a/AvalonDock/AvalonDock/Themes/generic.xaml
+++ b/AvalonDock/AvalonDock/Themes/generic.xaml
@@ -480,7 +480,7 @@
                                 Content="{TemplateBinding AutoHideWindow}"
                                 VerticalAlignment="{TemplateBinding VerticalAlignment}"
                                 HorizontalAlignment="{TemplateBinding HorizontalAlignment}"
-                                Grid.Column="1" Grid.Row="1"/>
+                                Grid.Column="1" Grid.Row="1"/> <!---->
                         </Grid>
                     </Border>
                 </ControlTemplate>
@@ -816,7 +816,7 @@
     <Style x:Key="{x:Type avalonDockControls:LayoutAutoHideWindowControl}" TargetType="{x:Type avalonDockControls:LayoutAutoHideWindowControl}">
         <Setter Property="Background" Value="{DynamicResource {x:Static SystemColors.ControlBrushKey}}"/>
     </Style>
-
+    
     <Style x:Key="{x:Type avalonDockControls:NavigatorWindow}" TargetType="{x:Type avalonDockControls:NavigatorWindow}">
         <Setter Property="Background" Value="{DynamicResource {x:Static SystemColors.ControlBrushKey}}"/>
         <Setter Property="SizeToContent" Value="WidthAndHeight"/>
