Build 2.0.1683 - Introducing Expression Dark theme, Patched Issue #15736
git-svn-id: https://avalondock.svn.codeplex.com/svn/Version2.0@96782 4ef1bfeb-0a34-4d02-9305-240e5b07a168

--- a/AvalonDock/AvalonDock.TestApp/MainWindow.xaml
+++ b/AvalonDock/AvalonDock.TestApp/MainWindow.xaml
@@ -43,7 +43,7 @@
         
         <avalonDock:DockingManager Grid.Row="1" x:Name="dockManager" AllowMixedOrientation="True" DocumentClosing="dockManager_DocumentClosing">
             <avalonDock:DockingManager.Theme>
-                <avalonDock:VS2010Theme/>
+                <avalonDock:ExpressionDarkTheme/>
             </avalonDock:DockingManager.Theme>
             <avalonDock:DockingManager.DocumentHeaderTemplate>
                 <DataTemplate>
