Build 2.0.1691 - Fixed #15745, Added ExpressionLight theme, Support for Hungarian language
git-svn-id: https://avalondock.svn.codeplex.com/svn/Version2.0@97076 4ef1bfeb-0a34-4d02-9305-240e5b07a168

--- a/AvalonDock/AvalonDock.TestApp/MainWindow.xaml
+++ b/AvalonDock/AvalonDock.TestApp/MainWindow.xaml
@@ -43,7 +43,7 @@
         
         <avalonDock:DockingManager Grid.Row="1" x:Name="dockManager" AllowMixedOrientation="True" DocumentClosing="dockManager_DocumentClosing">
             <avalonDock:DockingManager.Theme>
-                <avalonDock:ExpressionDarkTheme/>
+                <avalonDock:ExpressionLightTheme/>
             </avalonDock:DockingManager.Theme>
             <avalonDock:DockingManager.DocumentHeaderTemplate>
                 <DataTemplate>
