--- a/AvalonDock/AvalonDock/Themes/generic.xaml
+++ b/AvalonDock/AvalonDock/Themes/generic.xaml
@@ -507,9 +507,10 @@
                     <Border Background="{TemplateBinding Background}"
                             BorderBrush="{TemplateBinding BorderBrush}"
                             BorderThickness="{TemplateBinding BorderThickness}">
-                        <ContentPresenter Content="{Binding Model.Content, RelativeSource={RelativeSource TemplatedParent}}" 
+                            <ContentPresenter Content="{Binding LayoutItem.View, RelativeSource={RelativeSource TemplatedParent}}"/>
+                            <!--<ContentPresenter Content="{Binding Model.Content, RelativeSource={RelativeSource TemplatedParent}}" 
                                           ContentTemplate="{Binding LayoutItemTemplate, Mode=OneWay, RelativeSource={RelativeSource AncestorType={x:Type avalonDock:DockingManager}, Mode=FindAncestor}}"
-                                          ContentTemplateSelector="{Binding LayoutItemTemplateSelector, Mode=OneWay, RelativeSource={RelativeSource AncestorType={x:Type avalonDock:DockingManager}, Mode=FindAncestor}}"/>
+                                          ContentTemplateSelector="{Binding LayoutItemTemplateSelector, Mode=OneWay, RelativeSource={RelativeSource AncestorType={x:Type avalonDock:DockingManager}, Mode=FindAncestor}}"/>-->
                     </Border>
                 </ControlTemplate>
             </Setter.Value>
@@ -602,13 +603,18 @@
                             <Border x:Name="Header">
                                 <avalonDockControls:AnchorablePaneTitle Model="{Binding Model, RelativeSource={RelativeSource TemplatedParent}}"/>
                             </Border>
-                            
+
                             <ContentPresenter 
+                                Grid.Row="1"
+                                FlowDirection="{TemplateBinding FlowDirection}"
+                                Content="{Binding LayoutItem.View, RelativeSource={RelativeSource TemplatedParent}}"/>
+                            
+                            <!--<ContentPresenter 
                                 FlowDirection="{TemplateBinding FlowDirection}"
                                 Content="{Binding Model.Content, RelativeSource={RelativeSource TemplatedParent}}" 
                                 ContentTemplate="{Binding LayoutItemTemplate, Mode=OneWay, RelativeSource={RelativeSource AncestorType={x:Type avalonDock:DockingManager}, Mode=FindAncestor}}"
                                 ContentTemplateSelector="{Binding LayoutItemTemplateSelector, Mode=OneWay, RelativeSource={RelativeSource AncestorType={x:Type avalonDock:DockingManager}, Mode=FindAncestor}}"
-                                Grid.Row="1"/>
+                                Grid.Row="1"/>-->
                         </Grid>
                     </Border>
                     <ControlTemplate.Triggers>
