Build 2.0.1737 - Introducing first version of Metro theme. Fixed ContextMenuEx style issue
git-svn-id: https://avalondock.svn.codeplex.com/svn/Version2.0@97426 4ef1bfeb-0a34-4d02-9305-240e5b07a168

--- a/AvalonDock/AvalonDock.Themes.Expression/Theme.xaml
+++ b/AvalonDock/AvalonDock.Themes.Expression/Theme.xaml
@@ -91,7 +91,7 @@
                                     <avalonDockControls:ContextMenuEx
                                         ItemsSource="{Binding Model.ChildrenSorted, RelativeSource={RelativeSource TemplatedParent}}">
                                         <avalonDockControls:ContextMenuEx.ItemContainerStyle>
-                                            <Style TargetType="{x:Type avalonDockControls:MenuItemEx}">
+                                            <Style TargetType="{x:Type avalonDockControls:MenuItemEx}" BasedOn="{StaticResource {x:Type MenuItem}}">
                                                 <Setter Property="HeaderTemplate" Value="{Binding Path=Root.Manager.DocumentPaneMenuItemHeaderTemplate}"/>
                                                 <Setter Property="HeaderTemplateSelector" Value="{Binding Path=Root.Manager.DocumentPaneMenuItemHeaderTemplateSelector}"/>
                                                 <Setter Property="IconTemplate" Value="{Binding Path=Root.Manager.IconContentTemplate}"/>
