--- a/AvalonDock/AvalonDock.TestApp/MainWindow.xaml
+++ b/AvalonDock/AvalonDock.TestApp/MainWindow.xaml
@@ -2,6 +2,7 @@
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:avalonDock="http://avalondock.codeplex.com"
+        xmlns:local="clr-namespace:AvalonDock.TestApp"
         xmlns:winformsIntegration="clr-namespace:System.Windows.Forms.Integration;assembly=WindowsFormsIntegration"
         Title="MainWindow" Height="350" Width="525">
     <Grid x:Name="layoutRoot">
@@ -77,12 +78,7 @@
                         <avalonDock:LayoutAnchorablePane>
                             <avalonDock:LayoutAnchorable ContentId="toolWindow1" Title="Tool Window 1" Hiding="OnToolWindow1Hiding">
                                 <StackPanel>
-                                    <!--<Menu>
-                                        <MenuItem Header="Menu">
-                                            <MenuItem Header="Item 1"/>
-                                            <MenuItem Header="Item 2"/>
-                                        </MenuItem>
-                                    </Menu>-->
+                                    <local:TestUserControl/>
                                     <TextBox Text="{Binding TestTimer, Mode=OneWay, StringFormat='Tool Window 1 Attached to Timer ->\{0\}'}"/>
                                 </StackPanel>
                             </avalonDock:LayoutAnchorable>
