Issue 15234 - [Version 2.0] CanClose and CanHide not works right on LayoutAnchorable Themes are now updated with the fix.
git-svn-id: https://avalondock.svn.codeplex.com/svn/Version2.0@102592 4ef1bfeb-0a34-4d02-9305-240e5b07a168

--- a/Xceed.Wpf.AvalonDock.Themes.VS2010/Theme.xaml
+++ b/Xceed.Wpf.AvalonDock.Themes.VS2010/Theme.xaml
@@ -777,7 +777,7 @@
         <MenuItem Header="{x:Static avalonDockProperties:Resources.Anchorable_AutoHide}" 
                 Command="{Binding Path=AutoHideCommand}"/>
         <MenuItem Header="{x:Static avalonDockProperties:Resources.Anchorable_Hide}" 
-                Command="{Binding Path=CloseCommand}"
+                Command="{Binding Path=HideCommand}"
                 Visibility="{Binding Path=IsEnabled, RelativeSource={RelativeSource Self}, Mode=OneWay, Converter={StaticResource BoolToVisibilityConverter}}"/>
     </ContextMenu>
 
